--- a/elixir/vistor_management/lib/vistor_management_web/controllers/page_html/home.html.heex
+++ b/elixir/vistor_management/lib/vistor_management_web/controllers/page_html/home.html.heex
@@ -1,20 +1,16 @@
 <nav class="bg-gray-800">
   <div class="px-2 mx-auto max-w-7xl sm:px-6 lg:px-8">
     <div class="relative flex items-center justify-between h-16">
-      <div
-        class="flex items-center justify-center flex-1 sm:items-stretch sm:justify-start"
-      >
+      <div class="flex items-center justify-center flex-1 sm:items-stretch sm:justify-start">
         <div class="block ml-6">
           <div class="flex space-x-4">
             <div class="px-3 py-2 text-xl font-medium text-white ">
-              Ash Demo
+              Ash Demo 1
             </div>
           </div>
         </div>
       </div>
-      <div
-        class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
-      >
+      <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
         <%= if @current_user do %>
         <span class="px-3 py-2 text-sm font-medium text-white rounded-md">
           <%= @current_user.email %>
