path helper deprecated

--- a/elixir/vistor_management/lib/vistor_management_web/components/layouts/app.html.heex
+++ b/elixir/vistor_management/lib/vistor_management_web/components/layouts/app.html.heex
@@ -1,7 +1,7 @@
 <header class="px-4 sm:px-6 lg:px-8">
   <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
   <div><button onclick="goBack()">back</button></div>
-  <div><a href="/login">home</a></div>
+  <div><a href="/ticket/list">home</a></div>
   </div>
   <script>
     function goBack(){
